# board-app

./: Cargo.toml  spec.html
openapi_gen/: Cargo.toml  README.md
openapi_gen/.openapi-generator/: FILES
openapi_gen/src/: models.rs
openapi_gen/src/apis/: auth.rs  mod.rs  posts.rs  users.rs
openapi_gen/src/server/: mod.rs
reference/: spec.yaml
src/: entity.rs  main.rs  value_object.rs
src/service/: jwt.rs
