[package]
name = "board-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie", "multipart"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
openapi = { path = "openapi_gen" }
validator = { version = "0.18.1", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.38"
uuid = { version = "1.9.1", features = ["v4"] }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
argon2 = { version = "0.5.3", features = ["password-hash", "rand"] }
password-hash = { version = "0.5.0", features = ["getrandom"] }
thiserror = "1.0.61"
